[package]
name = "rustcord"
version = "0.1.0"
authors = ["AregevDev <aregevdev@gmail.com>"]
edition = "2018"
description = "A safe wrapper around the Discord Rich Presence API"
keywords = ["discord"]
repository = "https://gitlab.com/AregevDev/rustcord"
categories = ["ffi"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
libc = "0.2.48"
rustcord-sys = "0.1.0"
