[package]
name = "rustcord"
version = "0.2.2"
authors = ["AregevDev <aregevdev@gmail.com>"]
edition = "2018"
description = "A safe wrapper around the Discord Rich Presence API"
keywords = ["discord", "rpc"]
repository = "https://github.com/AregevDev/rustcord"
categories = ["api-bindings"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
libc = "0.2.48"
rustcord-sys = { path = "rustcord-sys", version = "0.2.2" }
