[package]
name = "rustcord-sys"
version = "0.2.2"
authors = ["AregevDev <aregevdev@gmail.com>"]
edition = "2018"
description = "Raw FFI bindings for the Discord Rich Presence API"
keywords = ["discord", "rpc"]
repository = "https://github.com/AregevDev/discord_rpc"
categories = ["api-bindings"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]

[build-dependencies]
bindgen = "0.52.0"
cmake = "0.1.42"
